--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
        "['measurement', 'station']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +124,7 @@
        "<AxesSubplot:xlabel='date'>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
        "max         6.700000"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +257,7 @@
        "[(9,)]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
        " ('USC00518838', 511)]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
        "[(54.0, 85.0, 71.66378066378067)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -352,12 +352,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
-    "# and return the minimum, average, and maximum temperatures for that range of dates\n"
+    "# and return the minimum, average, and maximum temperatures for that range of dates\n",
+    "import datetime as dt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "import sqlalchemy\n",
+    "from sqlalchemy.ext.automap import automap_base\n",
+    "from sqlalchemy.orm import Session\n",
+    "from sqlalchemy import create_engine, func\n",
+    "\n",
+    "from flask import Flask, jsonify\n",
+    "\n",
+    "engine = create_engine(\"sqlite:///hawaii.sqlite\")\n",
+    "\n",
+    "Base = automap_base()\n",
+    "\n",
+    "Base.prepare(engine, reflect=True)\n",
+    "\n",
+    "Measurement = Base.classes.measurement\n",
+    "Station = Base.classes.station\n",
+    "\n",
+    "session = Session(engine)\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "\n",
+    "@app.route(\"/\")\n",
+    "def welcome():\n",
+    "    return(\n",
+    "    '''\n",
+    "    Welcome to the Climate Analysis API!\\\n",
+    "    Available Routes:\\\n",
+    "    /api/v1.0/precipitation\\\n",
+    "    /api/v1.0/stations\\\n",
+    "    /api/v1.0/tobs\\\n",
+    "    /api/v1.0/temp/start/end\\\n",
+    "    ''')\n",
+    "\n",
+    "@app.route(\"/api/v1.0/precipitation\")\n",
+    "def precipitation():\n",
+    "   prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "   precipitation = session.query(Measurement.date, Measurement.prcp).\\\n",
+    "    filter(Measurement.date >= prev_year).all()\n",
+    "   precip = {date: prcp for date, prcp in precipitation}\n",
+    "   return jsonify(precip)\n",
+    "\n",
+    "@app.route(\"/api/v1.0/stations\")\n",
+    "def stations():\n",
+    "    results = session.query(Station.station).all()\n",
+    "    stations = list(np.ravel(results))\n",
+    "    return jsonify(stations=stations)\n",
+    "\n",
+    "@app.route(\"/api/v1.0/tobs\")\n",
+    "def temp_monthly():\n",
+    "    prev_year = dt.date(2017, 8, 23) - dt.timedelta(days=365)\n",
+    "    results = session.query(Measurement.tobs).\\\n",
+    "      filter(Measurement.station == 'USC00519281').\\\n",
+    "      filter(Measurement.date >= prev_year).all()\n",
+    "    temps = list(np.ravel(results))\n",
+    "    return jsonify(temps=temps)\n",
+    "\n",
+    "@app.route(\"/api/v1.0/temp/<start>\")\n",
+    "@app.route(\"/api/v1.0/temp/<start>/<end>\")\n",
+    "def stats(start=None, end=None):\n",
+    "    sel = [func.min(Measurement.tobs), func.avg(Measurement.tobs), func.max(Measurement.tobs)]\n",
+    "\n",
+    "    if not end:\n",
+    "        results = session.query(*sel).\\\n",
+    "            filter(Measurement.date >= start).all()\n",
+    "        temps = list(np.ravel(results))\n",
+    "        return jsonify(temps)\n",
+    "\n",
+    "    results = session.query(*sel).\\\n",
+    "        filter(Measurement.date >= start).\\\n",
+    "        filter(Measurement.date <= end).all()\n",
+    "    temps = list(np.ravel(results))\n",
+    "    return jsonify(temps)"
    ]
   },
   {
@@ -377,9 +452,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "PythonData",
    "language": "python",
-   "name": "python3"
+   "name": "pythondata"
   },
   "language_info": {
    "codemirror_mode": {
@@ -391,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
