--- a/SurfsUp_Challenge.ipynb
+++ b/SurfsUp_Challenge.ipynb
@@ -2305,7 +2305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -3314,7 +3314,7 @@
        " ...]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3329,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -4338,7 +4338,7 @@
        " ...]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4351,7 +4351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -4445,7 +4445,7 @@
        "[1517 rows x 1 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4458,7 +4458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -4534,7 +4534,7 @@
        "max      83.000000"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4546,10 +4546,451 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1st Additional Query (June Prec.)\n",
+    "june_prec = session.query(Measurement.tobs, Measurement.prcp).filter(extract('month', Measurement.date) == 6).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>0.01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>77.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1695</th>\n",
+       "      <td>79.0</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1696</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1697</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1698</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1699</th>\n",
+       "      <td>75.0</td>\n",
+       "      <td>0.20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1700 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tobs  prcp\n",
+       "0     78.0  0.00\n",
+       "1     76.0  0.01\n",
+       "2     78.0  0.00\n",
+       "3     76.0  0.00\n",
+       "4     77.0  0.00\n",
+       "...    ...   ...\n",
+       "1695  79.0  0.02\n",
+       "1696  74.0  0.10\n",
+       "1697  74.0  0.02\n",
+       "1698  76.0  0.04\n",
+       "1699  75.0  0.20\n",
+       "\n",
+       "[1700 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "june_prec_df = pd.DataFrame(june_prec)\n",
+    "june_prec_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1700.000000</td>\n",
+       "      <td>1574.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>74.944118</td>\n",
+       "      <td>0.136360</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.257417</td>\n",
+       "      <td>0.335731</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>64.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>73.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>75.000000</td>\n",
+       "      <td>0.020000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>77.000000</td>\n",
+       "      <td>0.120000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>4.430000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              tobs         prcp\n",
+       "count  1700.000000  1574.000000\n",
+       "mean     74.944118     0.136360\n",
+       "std       3.257417     0.335731\n",
+       "min      64.000000     0.000000\n",
+       "25%      73.000000     0.000000\n",
+       "50%      75.000000     0.020000\n",
+       "75%      77.000000     0.120000\n",
+       "max      85.000000     4.430000"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "june_prec_df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2nd Additional Query (Dec Prec.)\n",
+    "dec_prec = session.query(Measurement.tobs, Measurement.prcp).filter(extract('month', Measurement.date) == 12).all()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>76.0</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>64.0</td>\n",
+       "      <td>0.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1512</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1513</th>\n",
+       "      <td>71.0</td>\n",
+       "      <td>0.14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1514</th>\n",
+       "      <td>69.0</td>\n",
+       "      <td>1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1515</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>2.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1516</th>\n",
+       "      <td>65.0</td>\n",
+       "      <td>0.90</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1517 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      tobs  prcp\n",
+       "0     76.0  0.04\n",
+       "1     74.0  0.00\n",
+       "2     74.0  0.00\n",
+       "3     64.0  0.00\n",
+       "4     64.0  0.00\n",
+       "...    ...   ...\n",
+       "1512  71.0  0.14\n",
+       "1513  71.0  0.14\n",
+       "1514  69.0  1.03\n",
+       "1515  65.0  2.37\n",
+       "1516  65.0  0.90\n",
+       "\n",
+       "[1517 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_prec_df = pd.DataFrame(dec_prec)\n",
+    "dec_prec_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tobs</th>\n",
+       "      <th>prcp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>1517.000000</td>\n",
+       "      <td>1405.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>71.041529</td>\n",
+       "      <td>0.216819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.745920</td>\n",
+       "      <td>0.541399</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>69.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>71.000000</td>\n",
+       "      <td>0.030000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>74.000000</td>\n",
+       "      <td>0.150000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>83.000000</td>\n",
+       "      <td>6.420000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              tobs         prcp\n",
+       "count  1517.000000  1405.000000\n",
+       "mean     71.041529     0.216819\n",
+       "std       3.745920     0.541399\n",
+       "min      56.000000     0.000000\n",
+       "25%      69.000000     0.000000\n",
+       "50%      71.000000     0.030000\n",
+       "75%      74.000000     0.150000\n",
+       "max      83.000000     6.420000"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dec_prec_df.describe()"
+   ]
   }
  ],
  "metadata": {
